fix: broken css on secondary pages

--- a/scss/rebirth.scss
+++ b/scss/rebirth.scss
@@ -45,7 +45,7 @@ html {
   #chart {
     top: -120px;
   }
-  footer {
+  #footer-home {
     margin-top: -120px;
   }
 }
@@ -78,7 +78,7 @@ html {
   #chart {
     top: -90px;
   }
-  footer {
+  #footer-home {
     margin-top: -90px;
   }
 }
@@ -111,7 +111,7 @@ html {
   #chart {
     top: -180px;
   }
-  footer {
+  #footer-home {
     margin-top: -180px;
   }
 }
@@ -143,7 +143,7 @@ html {
   #chart {
     top: -250px;
   }
-  footer {
+  #footer-home {
     margin-top: -250px;
   }
 }
@@ -178,7 +178,7 @@ html {
   .flooz-container {
     top: -40px;
   }
-  footer {
+  #footer-home {
     margin-top: -370px;
   }
 }
